--- a/frontend-01blog/src/app/app.component.scss
+++ b/frontend-01blog/src/app/app.component.scss
@@ -36,7 +36,7 @@
   position: sticky;
   top: 0;
   z-index: 1000;
-  background: rgba(255, 255, 255, 0.85);
+  background: rgba(255, 255, 255, 0.2);
   /* Glassy */
   backdrop-filter: blur(12px);
   border-bottom: 1px solid rgba(255, 255, 255, 0.3);
@@ -72,7 +72,7 @@
   height: 40px;
   border-radius: 10px;
   transition: all 0.2s ease;
-  cursor: pointer;
+  cursor: default;
   border: none;
   background: transparent;
 }
@@ -84,7 +84,32 @@
 }
 
 /* User Specific Styles for Bell */
-button.icon-btn.bell-btn {
+.text-link {
+  font-size: 0.95rem;
+  font-weight: 500;
+  text-decoration: none;
+  color: rgba(255, 255, 255, 0.85);
+  padding: 0 0.5rem;
+  transition: color 0.2s;
+}
+
+.text-link:hover {
+  color: white;
+}
+
+.text-link.emphasize {
+  color: #b1b9ff;
+  /* Indigo-400 */
+  font-weight: 600;
+}
+
+.text-link.emphasize:hover {
+  color: white;
+  /* Indigo-300 */
+}
+
+.icon-btn,
+.logout-btn {
   display: flex;
   align-items: center;
   justify-content: center;
