fixing ui and avatars

--- a/frontend-01blog/src/app/app.component.scss
+++ b/frontend-01blog/src/app/app.component.scss
@@ -98,13 +98,13 @@
 }
 
 .text-link.emphasize {
-  color: #b1b9ff;
+  color: #64748b;
   /* Indigo-400 */
   font-weight: 600;
 }
 
 .text-link.emphasize:hover {
-  color: white;
+  color: #71839d;
   /* Indigo-300 */
 }
 
